--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 </fieldset>
 
 <block>
-<a href="https://twitter.com/Qiosz">Twitter</a>
+<a href="https://www.snapchat.com/add/%E2%81%A6p2.73">snapchat</a>
 </block>
 
 
 
-<footer> &copy; 2014 - 2017 Malr Rdd Inc. 
+<footer> &copy; 2020 - 2030 Malr Rdd Inc. 
 
 	 
 
